CKA-CKAD-CKS/workloads/main/database.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sql
  namespace: learning
  labels:
    app: sql
spec:
  serviceName: sql
  replicas: 3
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels:
        app: sql
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: topology.kubernetes.io/zone
              labelSelector:
                matchLabels:
                  app: web
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: topology.kubernetes.io/zone
              labelSelector:
                matchLabels:
                  app: sql
      containers:
        - name: mariadb
          image: mariadb:10.11
          ports:
            - containerPort: 3306
              name: sql
---
apiVersion: v1
kind: Service
metadata:
  namespace: learning
  name: sql
spec:
  type: LoadBalancer
  ports:
    - name: sql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: sql
